syntax = "proto3";

package category_admin;

option csharp_namespace = "Parstech.Shop.Shared.Protos.CategoryAdmin";

service CategoryAdminService {
  rpc GetCategoriesForAdmin (CategoryParameterRequest) returns (CategoryPageingDto);
  rpc GetCategory (CategoryRequest) returns (CategoryDto);
  rpc GetCategoryParents (EmptyRequest) returns (CategoryListResponse);
  rpc GetAllCategories (CategoryFilterRequest) returns (CategoryListResponse);
  rpc CreateCategory (CategoryDto) returns (ResponseDto);
  rpc UpdateCategory (CategoryDto) returns (ResponseDto);
  rpc DeleteCategory (CategoryRequest) returns (ResponseDto);
}

message CategoryParameterRequest {
  int32 current_page = 1;
  int32 take_page = 2;
  string filter = 3;
}

message CategoryRequest {
  int32 category_id = 1;
}

message EmptyRequest {
}

message CategoryFilterRequest {
  string filter = 1;
}

message CategoryPageingDto {
  int32 current_page = 1;
  int32 page_count = 2;
  int32 row_count = 3;
  repeated CategoryDto list = 4;
}

message CategoryListResponse {
  repeated CategoryDto categories = 1;
}

message CategoryDto {
  int32 group_id = 1;
  string group_title = 2;
  string latin_group_title = 3;
  int32 parent_id = 4;
  string image = 5;
  bool is_parnet = 6;
  bool show = 7;
}

message ResponseDto {
  bool is_successed = 1;
  string message = 2;
  string object = 3;
} 